--- a/Coffee store/login.html
+++ b/Coffee store/login.html
@@ -2,15 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
 <body>
     <h1>Login</h1>
-    <form action="http://127.0.0.1:5000/login" method="post">
+    <form id="loginForm">
         <input type="email" name="email" placeholder="Email" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit">Login</button>
     </form>
     <p><a href="signup.html">Signup</a> | <a href="reset_pass.html">Reset Password</a></p>
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const email = document.querySelector('input[name="email"]').value;
+            const password = document.querySelector('input[name="password"]').value;
+
+            try {
+                const response = await fetch('http://127.0.0.1:5500/api/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ email, password }),
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    console.log('Login successful:', result);
+
+                    // Store user data in localStorage
+                    localStorage.setItem('user', JSON.stringify({
+                        username: result.user.username,
+                        userId: result.user.id
+                    }));
+
+                    // Redirect to coffee.html
+                    window.location.href = 'coffee.html';
+                } else {
+                    alert(result.error || 'Login failed');
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                alert('An error occurred during login');
+            }
+        });
+    </script>
 </body>
 </html>
