--- a/Coffee store/admin.html
+++ b/Coffee store/admin.html
@@ -70,6 +70,7 @@
             <button onclick="redirectTo('delete_prod.html')">delete any product</button>
             <button onclick="redirectTo('update_prod.html')">update product details</button>
             <button onclick="redirectTo('all_prod.html')">see all prod</button>
+            <button onclick="redirectTo('delete_user.html')">delete user</button>
         </div>
     </div>
     <script>
