--- a/Coffee store/login.html
+++ b/Coffee store/login.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
 <body>
@@ -12,36 +11,37 @@
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit">Login</button>
     </form>
-    <p><a href="signup.html">Signup</a> | <a href="reset_pass.html">Reset Password</a></p>
+    <p><a href="signup.html">Signup</a></p>
+    <p><a href="forgot-password.html">Forgot Password?</a></p>
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', async function(event) {
             event.preventDefault();
 
-            const email = document.querySelector('input[name="email"]').value;
-            const password = document.querySelector('input[name="password"]').value;
+            // Get form data
+            const formData = new FormData(document.getElementById('loginForm'));
+
+            // Convert FormData to JSON
+            const data = {};
+            formData.forEach((value, key) => {
+                data[key] = value;
+            });
 
             try {
-                const response = await fetch('http://127.0.0.1:5500/api/login', {
+                const response = await fetch('http://127.0.0.1:5000/api/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ email, password }),
+                    body: JSON.stringify(data),
                 });
 
                 const result = await response.json();
 
                 if (response.ok) {
                     console.log('Login successful:', result);
-
-                    // Store user data in localStorage
-                    localStorage.setItem('user', JSON.stringify({
-                        username: result.user.username,
-                        userId: result.user.id
-                    }));
-
-                    // Redirect to coffee.html
+                    
+                    // Redirect to home page or another page
                     window.location.href = 'coffee.html';
                 } else {
                     alert(result.error || 'Login failed');
