--- a/Coffee store/login.html
+++ b/Coffee store/login.html
@@ -12,7 +12,7 @@
         <button type="submit">Login</button>
     </form>
     <p><a href="signup.html">Signup</a></p>
-    <p><a href="forgot-password.html">Forgot Password?</a></p>
+    <p><a href="reset_pass.html">Forgot Password?</a></p>
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', async function(event) {
