--- a/Coffee store/admin.html
+++ b/Coffee store/admin.html
@@ -11,11 +11,11 @@
             flex-direction: column;
             align-items: center;
             margin: 0;
-            background-color: #e9ecef;
+            background-color: #f4f4f9;
         }
         header {
             width: 100%;
-            background-color:rgb(50, 51, 46);;
+            background-color: #343a40;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -33,30 +33,49 @@
             height: 100vh;
             width: 100%;
             padding-top: 80px;
+            box-sizing: border-box;
         }
         .button-box {
-            background-color: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-color: #ffffff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
             border: 1px solid #dee2e6;
             text-align: center;
+            width: 80%;
+            max-width: 600px;
         }
         button {
             display: block;
-            width: 220px;
+            width: 100%;
             padding: 15px;
-            margin: 15px auto;
-            font-size: 18px;
+            margin: 10px 0;
+            font-size: 16px;
             cursor: pointer;
             background-color: #007bff;
             color: white;
             border: none;
             border-radius: 8px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         button:hover {
             background-color: #0056b3;
+            transform: translateY(-2px);
+        }
+        button:active {
+            background-color: #004494;
+            transform: translateY(0);
+        }
+        @media (max-width: 768px) {
+            .button-box {
+                padding: 20px;
+                width: 90%;
+            }
+            button {
+                font-size: 14px;
+                padding: 12px;
+            }
         }
     </style>
 </head>
@@ -66,11 +85,10 @@
     </header>
     <div class="container">
         <div class="button-box">
-            <button onclick="redirectTo('add-product.html')">Add product</button>
-            <button onclick="redirectTo('delete_prod.html')">delete any product</button>
-            <button onclick="redirectTo('update_prod.html')">update product details</button>
-            <button onclick="redirectTo('all_prod.html')">see all prod</button>
-            <button onclick="redirectTo('delete_user.html')">delete user</button>
+            <button onclick="redirectTo('add-product.html')">Add Product</button>
+            <button onclick="redirectTo('delete_prod.html')">Delete Product</button>
+            <button onclick="redirectTo('update_prod.html')">Update Product</button>
+            <button onclick="redirectTo('all_prod.html')">See All Products</button>
         </div>
     </div>
     <script>
@@ -80,3 +98,4 @@
     </script>
 </body>
 </html>
+
