--- a/Coffee store/admin.html
+++ b/Coffee store/admin.html
@@ -89,6 +89,7 @@
             <button onclick="redirectTo('delete_prod.html')">Delete Product</button>
             <button onclick="redirectTo('update_prod.html')">Update Product</button>
             <button onclick="redirectTo('all_prod.html')">See All Products</button>
+            <button onclick="redirectTo('delete_user.html')">delete all user</button>
         </div>
     </div>
     <script>
