--- a/Coffee store/coffee.html
+++ b/Coffee store/coffee.html
@@ -83,7 +83,16 @@
                     </ul>
                 </div>
             </div>
+            <div class="profile-container">
+                <div class="profile-picture" id="profile-picture">
+                    <img src="icon.png" alt="Profile Picture" id="profile-img">
+                </div>
+                <div class="dropdown" id="profile-dropdown">
+                    <!-- Dropdown options will be inserted here dynamically -->
+                </div>
+           
         </div>
+        
     </header>
 
     <section>
@@ -108,104 +117,105 @@
             <!-- Product items will be dynamically added here -->
         </div>
 
-        <!-- Why Bazaar Section -->
-        <div class="why-bazaar-container">
-            <div class="bazaar-text">
-                <h2>Why shop at Beans.pk</h2>
-            </div>
-            <div class="reason-container">
-                <div class="reason">
-                    <i class="fas fa-shipping-fast"></i>
-                    <h3>Shipping</h3>
-                    <p>Get your products delivered right to your doorstep with our reliable shipping services.</p>
-                </div>
-                <div class="reason">
-                    <i class="fas fa-undo"></i>
-                    <h3>Returns</h3>
-                    <p>Hassle-free returns process to ensure your satisfaction with our products.</p>
-                </div>
-                <div class="reason">
-                    <i class="fas fa-store"></i>
-                    <h3>Pickup</h3>
-                    <p>Convenient option to collect your purchases from our store at your preferred time.</p>
-                </div>
-                <div class="reason">
-                    <i class="fas fa-coffee"></i>
-                    <h3>Brand</h3>
-                    <p>Discover high-quality products from our trusted and renowned brand, known for excellence and
-                        reliability.</p>
-                </div>
-            </div>
-
-            <div class="bazaar-text">
-                <h2 class="second-reason">You will become a regular</h2>
-                <p class="second-para">Three things you won't find in your local store</p>
-            </div>
-            <div class="reason-container second-reason-2">
-                <div class="reason">
-                    <img class="second-icons" src="item13.png" alt="">
-                    <h3>Perfect Blends</h3>
-                    <p>Discover the exquisite harmony of flavors crafted to perfection, delivering a truly exceptional
-                        coffee experience.</p>
-                </div>
-                <div class="reason">
-                    <img class="second-icons" src="item14.png" alt="">
-                    <h3>With ecology in mind</h3>
-                    <p>Savor the rich aroma of our sustainably sourced coffees, knowing each cup supports environmental
-                        preservation.</p>
-                </div>
-                <div class="reason">
-                    <img class="second-icons" src="item15.png" alt="">
-                    <h3>Unique flavours</h3>
-                    <p>Immerse your senses in a world of extraordinary tastes, where every sip unveils a remarkable and
-                        unparalleled coffee journey.</p>
-                </div>
-            </div>
+       <!-- Why Bazaar Section -->
+       <div class="why-bazaar-container">
+        <div class="bazaar-text">
+            <h2>Why shop at Beans.pk</h2>
         </div>
-    </section>
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-1">
-                <ul>
-                    <p>Beans.Pk</p>
-                    <a>Brewing happiness, one cup at a time.</a>
-                    <div class="social-icons">
-                        <i id="facebook-icon" class="fa-brands fa-facebook"></i>
-                        <i id="instagram-icon" class="fa-brands fa-instagram"></i>
-                        <i id="twitter-icon" class="fa-brands fa-x-twitter"></i>
-                    </div>
-                </ul> 
-                <ul>
-                    <span class="navigate">
-                        <p>Navigate</p>
-                        <a href="coffee.html">Home</a>
-                        <a>Account</a>
-                        <a>About Us</a>
-                        <a>Contact</a>
-                    </span>
-                </ul>
-                <ul>
-                    <p>Supported Payment Methods</p>
-                    <div class="payment-methods">
-                        <i class="fa-brands fa-cc-visa"></i>
-                        <i class="fa-brands fa-cc-mastercard"></i>
-                        <i class="fa-brands fa-cc-paypal"></i>
-                        <i class="fa-brands fa-cc-discover"></i>
-                    </div>
-                </ul>
+        <div class="reason-container">
+            <div class="reason">
+                <i class="fas fa-shipping-fast"></i>
+                <h3>Shipping</h3>
+                <p>Get your products delivered right to your doorstep with our reliable shipping services.</p>
+            </div>
+            <div class="reason">
+                <i class="fas fa-undo"></i>
+                <h3>Returns</h3>
+                <p>Hassle-free returns process to ensure your satisfaction with our products.</p>
+            </div>
+            <div class="reason">
+                <i class="fas fa-store"></i>
+                <h3>Pickup</h3>
+                <p>Convenient option to collect your purchases from our store at your preferred time.</p>
+            </div>
+            <div class="reason">
+                <i class="fas fa-coffee"></i>
+                <h3>Brand</h3>
+                <p>Discover high-quality products from our trusted and renowned brand, known for excellence and
+                    reliability.</p>
             </div>
         </div>
 
-        <div class="footer-2-container">
-            <div class="footer-2">
-                <p>Copyright © 2024 Beans.Pk</p>
+        <div class="bazaar-text">
+            <h2 class="second-reason">You will become a regular</h2>
+            <p class="second-para">Three things you won't find in your local store</p>
+        </div>
+        <div class="reason-container second-reason-2">
+            <div class="reason">
+                <img class="second-icons" src="item13.png" alt="">
+                <h3>Perfect Blends</h3>
+                <p>Discover the exquisite harmony of flavors crafted to perfection, delivering a truly exceptional
+                    coffee experience.</p>
+            </div>
+            <div class="reason">
+                <img class="second-icons" src="item14.png" alt="">
+                <h3>With ecology in mind</h3>
+                <p>Savor the rich aroma of our sustainably sourced coffees, knowing each cup supports environmental
+                    preservation.</p>
+            </div>
+            <div class="reason">
+                <img class="second-icons" src="item15.png" alt="">
+                <h3>Unique flavours</h3>
+                <p>Immerse your senses in a world of extraordinary tastes, where every sip unveils a remarkable and
+                    unparalleled coffee journey.</p>
             </div>
         </div>
-    </footer>
+    </div>
+</section>
 
-    <script src="coffee.js"></script>
+<footer>
+    <div class="footer-container">
+        <div class="footer-1">
+            <ul>
+                <p>Beans.Pk</p>
+                <a>Brewing happiness, one cup at a time.</a>
+                <div class="social-icons">
+                    <i id="facebook-icon" class="fa-brands fa-facebook"></i>
+                    <i id="instagram-icon" class="fa-brands fa-instagram"></i>
+                    <i id="twitter-icon" class="fa-brands fa-x-twitter"></i>
+                </div>
+            </ul> 
+            <ul>
+                <span class="navigate">
+                    <p>Navigate</p>
+                    <a href="coffee.html">Home</a>
+                    <a>Account</a>
+                    <a>About Us</a>
+                    <a>Contact</a>
+                </span>
+            </ul>
+            <ul>
+                <p>Supported Payment Methods</p>
+                <div class="payment-methods">
+                    <i class="fa-brands fa-cc-visa"></i>
+                    <i class="fa-brands fa-cc-mastercard"></i>
+                    <i class="fa-brands fa-cc-paypal"></i>
+                    <i class="fa-brands fa-cc-discover"></i>
+                </div>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer-2-container">
+        <div class="footer-2">
+            <p>Copyright © 2024 Beans.Pk</p>
+        </div>
+    </div>
+</footer>
+<div id="notification" class="notification"></div>
+<script src="coffee.js"></script>
 </body>
+
 
 </html>
 <script>
