--- a/Coffee store/update_prod.html
+++ b/Coffee store/update_prod.html
@@ -120,6 +120,10 @@
                 <input type="number" id="quantity" name="quantity" required>
             </div>
             <div class="form-group">
+                <label for="store">Store</label>
+                <input type="text" id="store" name="store" required>
+            </div>
+            <div class="form-group">
                 <button type="submit">Update Product</button>
             </div>
             <div class="message" id="message"></div>
@@ -145,6 +149,7 @@
                             document.getElementById("description").value = product.description;
                             document.getElementById("image").value = product.image;
                             document.getElementById("quantity").value = product.quantity;
+                            document.getElementById("store").value = product.store; // Set store value
                             updateForm.onsubmit = (e) => {
                                 e.preventDefault();
                                 updateProduct(product.id);
@@ -162,13 +167,14 @@
                 const description = document.getElementById("description").value;
                 const image = document.getElementById("image").value;
                 const quantity = document.getElementById("quantity").value;
+                const store = document.getElementById("store").value;
 
                 fetch(`http://127.0.0.1:5000/api/products/${productId}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ name, price, description, image, quantity })
+                    body: JSON.stringify({ name, price, description, image, quantity, store })
                 })
                     .then(response => response.json())
                     .then(result => {
