--- a/Coffee store/add-product.html
+++ b/Coffee store/add-product.html
@@ -107,6 +107,10 @@
                 <input type="number" id="quantity" name="quantity" required>
             </div>
             <div class="form-group">
+                <label for="store">Store</label>
+                <input type="text" id="store" name="store" required>
+            </div>
+            <div class="form-group">
                 <button type="submit">Add Product</button>
             </div>
             <div class="message" id="message"></div>
@@ -122,13 +126,15 @@
             const description = document.getElementById('description').value;
             const image = document.getElementById('image').value;
             const quantity = parseInt(document.getElementById('quantity').value);
+            const store = document.getElementById('store').value; // Changed to text
 
             const productData = {
                 name: name,
                 price: price,
                 description: description,
                 image: image,
-                quantity: quantity
+                quantity: quantity,
+                store: store
             };
 
             fetch('http://127.0.0.1:5000/api/products', {
