--- a/Coffee store/reset_pass.html
+++ b/Coffee store/reset_pass.html
@@ -141,7 +141,7 @@
         async function handleFormSubmission(event, urlParams) {
             event.preventDefault();
             try {
-                const response = await fetch('http://127.0.0.1:5500/forgot-password', {
+                const response = await fetch('http://127.0.0.1:5000/forgot-password', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded',
@@ -149,8 +149,8 @@
                     body: new URLSearchParams(urlParams),
                 });
 
-                const result = await response.json();
-                showAlert(response.ok ? 'success' : 'error', result.message || 'An error occurred');
+                // const result = await response.json();
+                // showAlert(response.ok ? 'success' : 'error', result.message || 'An error occurred');
             } catch (error) {
                 console.error('Error:', error);
                 showAlert('error', 'An error occurred while resetting the password');
