--- a/Coffee store/cart.html
+++ b/Coffee store/cart.html
@@ -19,12 +19,12 @@
             <div class="page-name">
                 <h1>Beans.pk Cart</h1>
             </div>
-            <div class="cart">
+            <!-- <div class="cart">
                 <button class="btn-1" id="view-cart-button">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <p id="cart-total">$0.00 (0)</p>
                 </button>
-            </div>
+            </div> -->
         </div>
     </header>
 
