--- a/Coffee store/coffee.html
+++ b/Coffee store/coffee.html
@@ -218,7 +218,7 @@
 
 
 </html>
-<!-- <script>
+<script>
     // Get user data from localStorage
     const user = JSON.parse(localStorage.getItem('user'));
 
@@ -228,4 +228,4 @@
     } else {
         console.log('No user data found in localStorage.');
     }
-</script> -->
+</script>
