--- a/Coffee store/delete_user.html
+++ b/Coffee store/delete_user.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Users</title>
+    <title>Delete Users</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,18 +14,18 @@
         h1 {
             color: #333;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
+        ul {
+            list-style-type: none;
+            padding: 0;
         }
-        th, td {
-            border: 1px solid #ddd;
+        li {
+            background-color: #fff;
+            margin: 5px 0;
             padding: 10px;
-            text-align: left;
-        }
-        th {
-            background-color: #f4f4f4;
+            border: 1px solid #ccc;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         button {
             background-color: #e74c3c;
@@ -37,74 +37,43 @@
         button:hover {
             background-color: #c0392b;
         }
-        .message {
-            margin-top: 20px;
-            color: #e74c3c;
-        }
     </style>
 </head>
 <body>
-    <h1>Manage Users</h1>
-    <table id="userTable">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Username</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody id="userList"></tbody>
-    </table>
-    <div id="message" class="message"></div>
+    <h1>Delete Users</h1>
+    <ul id="userList"></ul>
 
     <script>
         // Fetch all users and display them
         async function fetchUsers() {
-            try {
-                const response = await fetch('http://127.0.0.1:5000/api/users');
-                const users = await response.json();
-                const userList = document.getElementById('userList');
-                const message = document.getElementById('message');
-                userList.innerHTML = '';
-                message.textContent = '';
+            const response = await fetch('http://127.0.0.1:5000/api/users');
+            const users = await response.json();
+            const userList = document.getElementById('userList');
+            userList.innerHTML = '';
 
-                if (users.length === 0) {
-                    message.textContent = 'No users found.';
-                }
-
-                users.forEach(user => {
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = `
-                        <td>${user.id}</td>
-                        <td>${user.username}</td>
-                        <td><button onclick="deleteUser(${user.id})">Delete</button></td>
-                    `;
-                    userList.appendChild(tr);
-                });
-            } catch (error) {
-                console.error('Error fetching users:', error);
-                document.getElementById('message').textContent = 'Error fetching users.';
-            }
+            users.forEach(user => {
+                const li = document.createElement('li');
+                li.innerHTML = `
+                    ${user.username} (ID: ${user.id})
+                    <button onclick="deleteUser(${user.id})">Delete</button>
+                `;
+                userList.appendChild(li);
+            });
         }
 
         // Delete a user by ID
         async function deleteUser(userId) {
             if (confirm('Are you sure you want to delete this user?')) {
-                try {
-                    const response = await fetch(`http://127.0.0.1:5000/api/delete_user/${userId}`, {
-                        method: 'DELETE'
-                    });
+                const response = await fetch(`http://127.0.0.1:5000/api/delete_user/${userId}`, {
+                    method: 'DELETE'
+                });
 
-                    const result = await response.json();
-                    if (response.ok) {
-                        alert(result.message);
-                        fetchUsers(); // Refresh the user list
-                    } else {
-                        alert(result.error || 'Failed to delete user');
-                    }
-                } catch (error) {
-                    console.error('Error deleting user:', error);
-                    alert('Error deleting user.');
+                const result = await response.json();
+                if (response.ok) {
+                    alert(result.message);
+                    fetchUsers(); // Refresh the user list
+                } else {
+                    alert(result.error || 'Failed to delete user');
                 }
             }
         }
