--- a/Coffee store/signup.html
+++ b/Coffee store/signup.html
@@ -32,9 +32,7 @@
             });
         }
     </script>
-======
     <style>
-        
         body, h1, h2, p, a {
             margin: 0;
             padding: 0;
@@ -144,13 +142,6 @@
 </head>
 
 <body>
-    <h1>Signup</h1>
-
-    <!-- Error message display area -->
-    <p id="error-message" style="color: red;"></p>
-
-    <form action="http://127.0.0.1:5000/api/signup" method="post" onsubmit="handleSignupResponse(event)">
-=======
     <div class="navbar">
         <a href="coffee.html">Home</a>
         <a href="login.html">Account</a>
@@ -161,7 +152,11 @@
 
     <h1>Signup Page</h1>
     <h2>Create your account</h2>
-    <form action="http://127.0.0.1:5000/signup" method="post">
+
+    <!-- Error message display area -->
+    <p id="error-message" style="color: red;"></p>
+
+    <form action="http://127.0.0.1:5000/signup" method="post" onsubmit="handleSignupResponse(event)">
         <input type="text" name="username" placeholder="Username" required><br>
         <input type="email" name="email" placeholder="Email" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
@@ -169,7 +164,7 @@
         <input type="text" name="country" placeholder="Country" required><br>
         <input type="text" name="city" placeholder="City" required><br>
         <input type="text" name="zipcode" placeholder="Zipcode" required><br>
-        <input type="text" name="word" placeholder="Security Word (save this it is important)" required><br>
+        <input type="text" name="word" placeholder="Security Word (save this, it is important)" required><br>
         <button type="submit">Signup</button>
     </form>
 
@@ -178,4 +173,3 @@
 </body>
 
 </html>
-
