--- a/Coffee store/all_prod.html
+++ b/Coffee store/all_prod.html
@@ -76,7 +76,7 @@
                         row.innerHTML = `
                             <td>${product.name}</td>
                             <td>${product.price}</td>
-                            <td>${product.description}</td>:q
+                            <td>${product.description}</td>
                             <td><img src="${product.image}" alt="${product.name}" width="50"></td>
                             <td>${product.quantity}</td>
                             <td>${product.store}</td>
