--- a/Coffee store/login.html
+++ b/Coffee store/login.html
@@ -122,7 +122,7 @@
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit">Login</button>
     </form>
-
+    <p><a href="login_vendor.html">Login as store owner</a></p>
     <p><a href="signup.html">Signup</a></p>
     <p><a href="reset_pass.html">Forgot Password?</a></p>
 
