--- a/Coffee store/login_vendor.html
+++ b/Coffee store/login_vendor.html
@@ -123,10 +123,9 @@
         <button type="submit">Login</button>
     </form>
 
-    <p><a href="signup.html">Signup</a></p>
     <p><a href="reset_pass.html">Forgot Password?</a></p>
-    <p><a href="login_vendor.html">sign in as user</a></p>
-    <p>Don't have an account ? <a href="signup.html">Signup</a></p>
+    <p><a href="login.html">sign in as user</a></p>
+    <p>Don't have an account ? <a href="signup_vendor.html">Signup</a></p>
     <p><a href="forgot-password.html">Forgot Password?</a></p>
 
 
@@ -159,7 +158,7 @@
             v_name=result.vendor.vendor_name; // vendor name 
             v_id=result.vendor.vendor_id; // vendor id
             localStorage.setItem('v_id', v_id);
-            alert(userid);
+            alert(v_id);
             // Redirect to home page or another page
             window.location.href = 'dashboard.html';
         } else {
@@ -167,7 +166,7 @@
         }
     } catch (error) {
         console.error('Error:', error);
-        alert('An error occurred during login');
+        alert('An error occurred during login' ,error);
     }
 });
     </script>
