--- a/Coffee store/signup_vendor.html
+++ b/Coffee store/signup_vendor.html
@@ -162,6 +162,7 @@
         <input type="text" name="store_name" placeholder="Store Name" required><br>
         <input type="text" name="address" placeholder="Address" required><br>
         <input type="text" name="phone_number" placeholder="Phone number"><br>
+        <input type="text" name="store" placeholder="location" required><br>
         <button type="submit">Signup</button>
     </form>
 
