--- a/Coffee store/checkout.html
+++ b/Coffee store/checkout.html
@@ -64,10 +64,13 @@
             
             <!-- Container for dynamically generated cart items -->
             <div id="cart-items-container" style="display: none;"></div>
+            <input type="text" id="discountCode" placeholder="Enter discount code">
+            <button id="apply-discount">Apply Discount</button>
+            
 
             <!-- Total amount -->
             <div id="total-amount">
-                <p>Total: $<span id="total-price">0.00</span></p>
+                <span>Total: $<span id="total-price">0.00</span></span>
             </div>
 
             <!-- Confirm Order button -->
