--- a/Coffee store/admin.html
+++ b/Coffee store/admin.html
@@ -85,6 +85,7 @@
     </header>
     <div class="container">
         <div class="button-box">
+            <button onclick="redirectTo('add_discounts.html')">add discounts</button>
             <button onclick="redirectTo('add-product.html')">Add Product</button>
             <button onclick="redirectTo('delete_prod.html')">Delete Product</button>
             <button onclick="redirectTo('update_prod.html')">Update Product</button>
