--- a/Coffee store/signup.html
+++ b/Coffee store/signup.html
@@ -156,7 +156,7 @@
     <!-- Error message display area -->
     <p id="error-message" style="color: red;"></p>
 
-    <form action="http://127.0.0.1:5000/signup" method="post" onsubmit="handleSignupResponse(event)">
+    <form action="http://127.0.0.1:5000/api/signup" method="post" onsubmit="handleSignupResponse(event)">
         <input type="text" name="username" placeholder="Username" required><br>
         <input type="email" name="email" placeholder="Email" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
